--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,58 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    color-scheme: dark;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@font-face {
+  font-family: "Draconis";
+  src: url("/fonts/Draconis.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vecna";
+  src: url("/fonts/Vecna.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Vecna";
+  src: url("/fonts/VecnaBold.ttf") format("truetype");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@layer base {
+  body {
+    overflow-x: hidden;
+    overflow-y: scroll;
+  }
+  thead {
+    display: table-row-group;
+  }
+}
+
+@layer utilities {
+  .text-accent-content {
+    @apply print:text-gray-700;
+  }
+  .text-secondary {
+    --tw-drop-shadow: drop-shadow(0 4px 3px rgb(0 0 0 / 0.2)) drop-shadow(0 1px 1px rgb(0 0 0 / 1));
+    @apply print:drop-shadow-none;
+  }
+}
+
+@layer components {
+  .img-grow:hover img {
+    @apply motion-safe:scale-125 transition-transform;
+  }
 }
